# libds

./: .clang-format  .clang-tidy  .codespellrc  .gitattributes  .gitignore  BUILDING.md  CMakeLists.txt  CMakePresets.json  HACKING.md  LICENSE  README.md  conanfile.py
cmake/: coverage.cmake  docs.cmake  install-config.cmake  install-rules.cmake  variables.cmake
docs/: Doxyfile.in
example/: CMakeLists.txt  empty_example.cpp
include/libds/: libds.hpp  vec.hpp
test/: .clang-tidy  CMakeLists.txt
test/source/: libds_test.cpp  vec.cpp
